# bmmm

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  LICENSE  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
artifacts/: data.csv
configs/: ci.yaml  default.yaml
dashboard/: README.md  app.py  core.py  requirements.txt
dashboard/assets/: dashboard.json
docs/: budget-optimization.md  concepts.md  index.md  parameter-recovery.md  usage-api.md  usage-cli.md
docs/api/: artifacts.md  cli.md  config.md  data-generate.md  data-transforms.md  model-analysis.md  model-budget.md  model-mmm.md  service-app.md  service-schemas.md  viz-plots.md
scripts/: hdi_vs_dataset_size.py
src/bmmm/: __init__.py  artifacts.py  cli.py  config.py  constants.py  dashboard_export.py
src/bmmm/data/: generate.py  transforms.py
src/bmmm/model/: __init__.py  analysis.py  budget.py  mmm.py
src/bmmm/service/: __init__.py  app.py  schemas.py
src/bmmm/viz/: __init__.py  plots.py
tests/: test_budget.py  test_config.py  test_generate.py  test_service.py  test_smoke.py  test_training_smoke.py  test_transforms.py
